[project]
name = "ai-agents-demos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.7.2",
    "pydantic-ai-slim>=0.7.2",
    "requests>=2.32.4",
    "wikipedia>=1.4.0",
]
